registry/saap/components/minio/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.saap.dev`)
      services:
        - name: minio
          port: 80
  tls:
    secretName: minio-saap-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
  annotations:
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-console.saap.dev`)
      services:
        - name: minio-console
          port: 80
  tls:
    secretName: minio-console-saap-tls
